--- a/src/ui/preferences/ContentBlockingDialog.ui
+++ b/src/ui/preferences/ContentBlockingDialog.ui
@@ -109,6 +109,13 @@
                </property>
               </widget>
              </item>
+             <item row="4" column="0">
+              <widget class="QCheckBox" name="enable3rdpartyBlockCheckBox">
+               <property name="text">
+                <string>Enable 3rd-party blocking</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </item>
           </layout>
